# fluisim

./: .gitmodules  Cargo.toml
fluisim/: Cargo.toml
fluisim/src/: main.rs  particle.rs  simulation.rs  ui.rs
hydrodynamics/: Cargo.toml  build.rs
hydrodynamics/src/: field.rs  influence.rs  kernel.rs  lib.rs  smoothing.rs
hydrodynamics/src/kernels/: debrun_spiky.rs  mod.rs  muller_viscous.rs  poly6.rs
hydrodynamics/whitepaper/: main.tex  references.bib  symbols.tex
hydrodynamics/whitepaper/section/: field_kernel.tex  introduction.tex  kernel.tex  numeric_gradient.tex  sample_field.tex
src/: main.rs  particle.rs  particles.rs  settings.rs  simulation.rs  state.rs  ui.rs
src/simulation/: mod.rs  resources.rs  settings.rs
src/util/: interval.rs  mod.rs
util/: Cargo.toml
util/src/: bounds.rs  euclidean.rs  lib.rs  nball.rs  to_array.rs
