[package]
name = "fluisim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspaces]
members = ["util"]

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_egui = "0.27.0"
itertools = "0.13.0"
util = { path = "util" }
